load("@rules_zig//zig:defs.bzl", "zig_library")

cc_library(
    name = "cc",
    hdrs = [
        "zig_allocator.h",
        "zig_slice.h",
    ],
    visibility = ["//visibility:public"],
)

zig_library(
    name = "zig",
    srcs = [
        "zig_allocator.zig",
        "zig_slice.zig",
    ],
    import_name = "ffi",
    main = "ffi.zig",
    visibility = ["//visibility:public"],
    deps = [":cc"],
)
