load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_library", "zig_test")

cc_library(
    name = "c",
    hdrs = ["mlir.h"],
    visibility = ["//mlir:__subpackages__"],
    deps = [
        "@llvm-project//mlir:CAPIArith",
        "@llvm-project//mlir:CAPIIR",
        "@llvm-project//mlir:CAPIMemRef",
        "@llvm-project//mlir:CAPITransforms",
    ],
)

zig_library(
    name = "mlir",
    main = "mlir.zig",
    visibility = ["//visibility:public"],
    deps = [
        ":c",
        "//stdx",
    ],
)

zig_test(
    name = "test",
    deps = [":mlir"],
)

zig_binary(
    name = "main",
    args = [
        "$(location @mnist//:mnist.safetensors)",
        "$(location @mnist//:t10k-images.idx3-ubyte)",
    ],
    data = [
        "@mnist//:mnist.safetensors",
        "@mnist//:t10k-images.idx3-ubyte",
    ],
    main = "main.zig",
    visibility = ["//visibility:public"],
    deps = [
        ":mlir",
        "//zml",
        "//mlir/dialects",
        # ":c",
        "//stdx",
        "//async",
    ],
)
