load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_zig//zig:defs.bzl", "zig_library", "zig_test")

cc_library(
    name = "c",
    tags = ["manual"],
    srcs = ["register.cc"],
    hdrs = ["mlir.h"],
    visibility = ["//mlir:__subpackages__"],
    deps = [
        "@llvm-project//mlir:AffineDialect",
        "@llvm-project//mlir:CAPIArith",
        "@llvm-project//mlir:CAPICF",
        "@llvm-project//mlir:CAPIIR",
        "@llvm-project//mlir:CAPIMath",
        "@llvm-project//mlir:CAPIMemRef",
        "@llvm-project//mlir:CAPISCF",
        "@llvm-project//mlir:CAPITransforms",
        "@llvm-project//mlir:CAPIVector",
        "@llvm-project//mlir:FuncExtensions",
    ],
)

zig_library(
    name = "mlir",
    tags = ["manual"],
    main = "mlir.zig",
    visibility = ["//visibility:public"],
    deps = [
        ":c",
        "//stdx",
    ],
)

zig_test(
    name = "test",
    deps = [":mlir"],
)
