load("@rules_zig//zig:defs.bzl", "zig_library")

zig_library(
    name = "pjrt",
    srcs = ["ffi.zig"],
    main = "pjrt.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//stdx",
        "@xla//xla/ffi/api:c_api",
        "@xla//xla/pjrt/c:pjrt_c_api_ffi_extension_hdrs",
        "@xla//xla/pjrt/c:pjrt_c_api_gpu_extension_hdrs",
        "@xla//xla/pjrt/c:pjrt_c_api_hdrs",
        "@xla//xla/pjrt/c:pjrt_c_api_triton_extension_hdrs",
    ],
)
