load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_zig//zig:defs.bzl", "zig_library")

RUNTIMES = {
    "cpu": True,
    "cuda": False,
    "rocm": False,
    "tpu": False,
    "neuron": False,
}

[
    bool_flag(
        name = runtime,
        build_setting_default = default,
    )
    for runtime, default in RUNTIMES.items()
]

[
    config_setting(
        name = "{}.enabled".format(runtime),
        flag_values = {":{}".format(runtime): "True"},
        visibility = ["//runtimes:__subpackages__"],
    )
    for runtime in RUNTIMES.keys()
]

filegroup(
    name = "layers",
    srcs = select({
        ":cpu.enabled": ["//runtimes/cpu:layers"],
        "//conditions:default": [],
    }) + select({
        ":cuda.enabled": ["//runtimes/cuda:layers"],
        "//conditions:default": [],
    }) + select({
        ":neuron.enabled": ["//runtimes/neuron:layers"],
        "//conditions:default": [],
    }) + select({
        ":rocm.enabled": ["//runtimes/rocm:layers"],
        "//conditions:default": [],
    }) + select({
        ":tpu.enabled": ["//runtimes/tpu:layers"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

zig_library(
    name = "runtimes",
    main = "runtimes.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//pjrt",
    ] + [
        "//runtimes/{}".format(runtime)
        for runtime in RUNTIMES.keys()
    ],
)
