load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_zig//zig:defs.bzl", "zig_binary")


# tpu grpc

proto_library(
    name = "tpu_metric_service_proto",
    srcs = ["bindings/tpu/libtpu/tpu_metric_service.proto"],
    strip_import_prefix = "bindings/tpu/libtpu",
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

cc_proto_library(
    name = "tpu_metric_service_cc_proto",
    deps = [":tpu_metric_service_proto"],
)

cc_grpc_library(
    name = "tpu_metric_service_cc_grpc",
    srcs = [":tpu_metric_service_proto"],
    grpc_only = True,
    deps = [":tpu_metric_service_cc_proto"],
)

cc_library(
    name = "tpuinfo",
    srcs = ["bindings/tpu/libtpu/tpuinfo.cc"],
    hdrs = ["bindings/tpu/libtpu/tpuinfo.h"],
    strip_include_prefix = "bindings/tpu/libtpu",
    deps = [
        ":tpu_metric_service_cc_grpc",
        ":tpu_metric_service_cc_proto",
        "@grpc//:grpc++",
    ],
)

# Defines

cc_library(
    name = "cuda_defines",
    defines = select({
        "//platforms:cuda.enabled": ["ZML_RUNTIME_CUDA"],
        "//conditions:default": ["ZML_RUNTIME_CUDA_DISABLED"],
    }),
)

cc_library(
    name = "rocm_defines",
    defines = select({
        "//platforms:rocm.enabled": ["ZML_RUNTIME_ROCM"],
        "//conditions:default": ["ZML_RUNTIME_ROCM_DISABLED"],
    }),
)

cc_library(
    name = "neuron_defines",
    defines = select({
        "//platforms:neuron.enabled": ["ZML_RUNTIME_NEURON"],
        "//conditions:default": ["ZML_RUNTIME_NEURON_DISABLED"],
    }),
)

cc_library(
    name = "tpu_defines",
    defines = select({
        "//platforms:tpu.enabled": ["ZML_RUNTIME_TPU"],
        "//conditions:default": ["ZML_RUNTIME_TPU_DISABLED"],
    }),
)

# smi

copy_to_directory(
    name = "sandbox",
    srcs = select({
        "//platforms:rocm.enabled": [
            "@amd-smi-lib//:libamd_smi",
            "@libdrm-amdgpu-amdgpu1//:libdrm_amdgpu",
        ],
        "//conditions:default": [],
    }),
    replace_prefixes = {
        "opt/amdgpu/lib/x86_64-linux-gnu": "lib",
    },
    include_external_repositories = ["**"],
)

zig_binary(
    name = "zml-smi",
    srcs = glob([
        "tui/**/*.zig",
    ]) + [
        "bindings/dynlib.zig",
        "bindings/amdsmi/amdsmi.zig",
        "bindings/amdsmi/metrics.zig",
        "bindings/amdsmi/process.zig",
        "bindings/linux/metrics.zig",
        "bindings/linux/process.zig",
        "bindings/neuron/metrics.zig",
        "bindings/neuron/process.zig",
        "bindings/neuron/schema.zig",
        "bindings/nvml/metrics.zig",
        "bindings/nvml/nvml.zig",
        "bindings/nvml/process.zig",
        "bindings/tpu/process.zig",
        "bindings/tpu/metrics.zig",
        "bindings/tpu/tpuinfo.zig",
        "info/device_info.zig",
        "info/host_info.zig",
        "info/process_info.zig",
        "platform.zig",
        "sysfs.zig",
        "worker.zig",
    ],
    extra_srcs = glob([
        "tui/assets/*",
    ]),
    data = [":sandbox"],
    main = "main.zig",
    deps = [
        ":cuda_defines",
        ":neuron_defines",
        ":rocm_defines",
        ":tpu_defines",
        "//bazel",
        "//stdx",
        "//zml",
        "@libvaxis//:vaxis",
        "@rules_zig//zig/runfiles",
    ] + select({
        "//platforms:tpu.enabled": [
            ":tpuinfo",
        ],
        "//conditions:default": [],
    }) + select({
        "//platforms:cuda.enabled": [
            "@cuda_nvml_dev//:nvml",
        ],
        "//conditions:default": [],
    }) + select({
        "//platforms:rocm.enabled": [
            "@amd-smi-lib//:amdsmi",
        ],
        "//conditions:default": [],
    }),
)
