load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "zml_utils",
    srcs = ["zml_utils.py"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "nsys",
    srcs = ["nsys.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "rocprofv3",
    data = [
        "@libpjrt_rocm//:sandbox",
        "@rocprofiler-sdk//:rocprofv3_tool",
    ],
    srcs = ["rocprofv3.sh"],
    visibility = ["//visibility:public"],
)
