load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

py_library(
    name = "zml_utils",
    srcs = ["zml_utils.py"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "nsys",
    srcs = ["nsys.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "rocprofv3",
    data = [
        "@amdrocm-profiler-base//:rocprofv3_tool",
        "@libpjrt_rocm//:sandbox",
    ],
    srcs = ["rocprofv3.sh"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "eol_attributes_test",
    srcs = ["check_eol_attributes.sh"],
    data = ["//:.gitattributes"],
)
