load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_zig//zig:defs.bzl", "zig_library")

cc_library(
    name = "upb_c",
    hdrs = ["upb.h"],
    deps = [
        "@com_google_protobuf//upb/message:copy",
    ],
)

zig_library(
    name = "upb",
    main = "upb.zig",
    visibility = ["//visibility:public"],
    deps = [":upb_c"],
    zigopts = [
        #TODO(cerisier): Remove me when this is done inside rules_zig.
        "-fllvm",
    ],
)
