load("@rules_zig//zig:defs.bzl", "zig_library")

zig_library(
    name = "vfs",
    main = "vfs.zig",
    srcs = [
        "base.zig",
        "file.zig",
        "gcs.zig",
        "hf.zig",
        "http.zig",
        "parallel_read.zig",
        "s3.zig",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//stdx",
    ],
)
